@@ -28,7 +28,6 @@ import static tech.pegasys.teku.infrastructure.unsigned.UInt64.ZERO;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes32;
 import org.junit.jupiter.api.Test;
 import tech.pegasys.teku.infrastructure.async.SafeFutureAssert;
@@ -336,7 +335,7 @@ public class ForkChoiceStrategyTest extends AbstractBlockMetadataStoreTest {
 
     // Check that all blocks prior to latest finalized have been pruned
     final List<SignedBlockAndState> allBlocks =
-        storageSystem.chainBuilder().streamBlocksAndStates().collect(Collectors.toList());
+        storageSystem.chainBuilder().streamBlocksAndStates().toList();
     for (SignedBlockAndState block : allBlocks) {
       if (block.getSlot().isLessThan(finalizedBlock.getSlot())) {
         assertThat(forkChoiceStrategy.contains(block.getRoot())).isFalse();
@@ -392,6 +391,38 @@ public class ForkChoiceStrategyTest extends AbstractBlockMetadataStoreTest {
     transaction.commit();
 
     assertThat(bestHead).isEqualTo(block4.getRoot());
+  }
+
+  @Test
+  void executionBlockNumber_shouldBeEmptyForUnknownBlock() {
+    final StorageSystem storageSystem = initStorageSystem(TestSpecFactory.createMinimalBellatrix());
+    final ForkChoiceStrategy strategy = getProtoArray(storageSystem);
+    assertThat(strategy.executionBlockNumber(Bytes32.ZERO)).isEmpty();
+  }
+
+  @Test
+  void executionBlockNumber_shouldGetExecutionBlockNumberForKnownBlock() {
+    final StorageSystem storageSystem = initStorageSystem(TestSpecFactory.createMinimalBellatrix());
+    final SignedBlockAndState block1 =
+        storageSystem
+            .chainBuilder()
+            .generateBlockAtSlot(1, BlockOptions.create().setTransactions());
+    storageSystem.chainUpdater().saveBlock(block1);
+    assertThat(block1.getExecutionBlockNumber()).isNotEmpty();
+
+    final ReadOnlyForkChoiceStrategy strategy =
+        storageSystem.recentChainData().getForkChoiceStrategy().orElseThrow();
+    assertThat(strategy.executionBlockNumber(block1.getRoot()))
+        .isEqualTo(block1.getExecutionBlockNumber());
+
+    storageSystem.restarted();
+    assertThat(
+            storageSystem
+                .recentChainData()
+                .getForkChoiceStrategy()
+                .orElseThrow()
+                .executionBlockNumber(block1.getRoot()))
+        .isEqualTo(block1.getExecutionBlockNumber());
   }
 
   @Test
